Updated scss, added js folder

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           id="email"
           class="email-field"
           placeholder="Your email address..."
+          required
         />
 
         <button type="submit" class="button">Notify Me</button>
