--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p class="header__text">Subscribe and get notified</p>
       </header>
       <main>
-        <form action="#" method="post" autocomplete="on">
+        <form action="#" method="post">
           <label for="email" class="sr-only">
             Enter your email address here to subscribe:
           </label>
@@ -75,5 +75,7 @@
         <p class="copyright">&copy; Copyright Ping. All rights reserved.</p>
       </footer>
     </div>
+
+     <script src="./js/main.js"></script>
   </body>
 </html>
